tests/no_compile/repr_c_mandatory.stderr
error: `#[derive(Mmio)]` only works on repr(C) types
 --> tests/no_compile/repr_c_mandatory.rs:2:8
  |
2 | struct Uart {
  |        ^^^^
